# ray-tracing

./: .gitignore  CMakeLists.txt  README.md
src/: AABB.cpp  AABB.hpp  AxisAlignedBoundingBox.hpp  BVH.hpp  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Camera.tpp  Color.hpp  Hittable.hpp  HittableList.hpp  HittableOld.hpp  ImageColor.hpp  Material.cpp  Material.hpp  Random.hpp  Ray.hpp  Scenes.hpp  Sphere.cpp  Sphere.hpp  Types.hpp  main.cpp
src/Math/: Interval.hpp  Matrix.hpp  Number.hpp  Numbers.hpp  Random.hpp  Vector.hpp  VectorOld.hpp
src/Util/: Aliases.hpp  AutoRelease.hpp  DirectoryWatcher.hpp  DirectoryWatcher_Linux.cpp  DirectoryWatcher_Win32.cpp  Enums.hpp  Log.hpp  StringHash.hpp  Util.cpp  Util.hpp
tests/: CMakeLists.txt  Matrix4Tests.cpp  Vector3Tests.cpp  VectorStaticTests.cpp
