cmake_minimum_required(VERSION 4.1.0)
project(ray-tracing)

set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(VENDOR_DIR ${CMAKE_SOURCE_DIR}/vendor)

include(FetchContent)
set(FETCHCONTENT_QUIET FALSE)

FetchContent_Declare(
    googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
    GIT_TAG v1.17.0
    SOURCE_DIR ${VENDOR_DIR}/googletest
)

add_subdirectory(src)
# add_subdirectory(${VENDOR_DIR}/assimp)

enable_testing()
include(CTest)
add_subdirectory(tests)
